[gd_scene load_steps=7 format=3 uid="uid://bixb37ar03u1y"]

[ext_resource type="Script" uid="uid://dubms8ihbp0rm" path="res://scenes/quests/quest_ui.gd" id="1_dfri7"]
[ext_resource type="Texture2D" uid="uid://b4vsyy8dc6oor" path="res://assets/gui/panels/v_bar.png" id="1_ubyec"]
[ext_resource type="Texture2D" uid="uid://dmua3jnsjlbgr" path="res://assets/gui/buttons/button_rect.png" id="3_1ceyf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_efemy"]
texture = ExtResource("1_ubyec")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ubyec"]
texture = ExtResource("3_1ceyf")
modulate_color = Color(0.646029, 0.646029, 0.646029, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hh0ek"]
texture = ExtResource("3_1ceyf")

[node name="QuestUI" type="Panel"]
custom_minimum_size = Vector2(232, 373)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1688.0
offset_bottom = -707.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_efemy")
script = ExtResource("1_dfri7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="QuestName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quest Name"
horizontal_alignment = 1

[node name="ObjectivesMarginPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="ObjectivesLable" type="Label" parent="MarginContainer/VBoxContainer/ObjectivesMarginPanel"]
layout_mode = 2
size_flags_vertical = 0
text = "Objective"
horizontal_alignment = 1

[node name="ObjectivesContainter" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ObjectivesMarginPanel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="RewardsMarginPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="RewardsLabel" type="Label" parent="MarginContainer/VBoxContainer/RewardsMarginPanel"]
layout_mode = 2
size_flags_vertical = 0
text = "Rewards"
horizontal_alignment = 1

[node name="RewardsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/RewardsMarginPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="CompleteQuestButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/disabled = SubResource("StyleBoxTexture_ubyec")
theme_override_styles/normal = SubResource("StyleBoxTexture_hh0ek")
text = "Complete"

[connection signal="pressed" from="MarginContainer/VBoxContainer/CompleteQuestButton" to="." method="_on_complete_quest_button_pressed"]
